--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "express": "^4.18.1"
+    "body-parser": "^1.19.2",
+    "express": "^4.17.3"
   }
 }
