--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "parcel watch index.html",
     "build": "npm install --include=dev && parcel build index.html"
   },
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^28.0.3",
     "parcel": "^2.5.0"
   },
   "dependencies": {
